Adjust env defaults for admin and generated user credentials

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,11 @@ SESSION_COOKIE_SAMESITE=lax
 CORS_ALLOWED_ORIGINS=https://app.example.com
 
 # Admin bootstrap account
-ADMIN_EMAIL=admin@brillar.io
+ADMIN_EMAIL=admin@b-connect.site
 ADMIN_PASSWORD=admin
+
+# Default password for auto-generated employee login records
+DEFAULT_USER_PASSWORD=bconnet
 
 # Database
 MONGODB_URI=mongodb://localhost:27017
